syntax = "proto3";

package Watch;

message WatchVideoDto {
  string userId = 1;
  string videoId = 2;
  string watchedAt = 3;
}

message WatchVideoRsponse {
  string response = 1;
}

service WatchService {
  rpc watchVideo (WatchVideoDto) returns (WatchVideoRsponse) {};
}